--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ margin-top:50px;
 .nav-right ul li{
 display:block;
   line-height: 4.2em;
+  width: 100%!important;
 }
 .nav-right ul li a {
   color: #323b43;
@@ -90,7 +91,7 @@ font-family: 'Jockey One', sans-serif;
 
 /*-- //banner --*/
 /*-- effect for nav --*/
-.cl-effect-1 a::before,
+/*.cl-effect-1 a::before,
 .cl-effect-1 a::after {
 	display: inline-block;
 	opacity: 0;
@@ -105,17 +106,17 @@ font-family: 'Jockey One', sans-serif;
 	-webkit-transform: translateX(20px);
 	-moz-transform: translateX(20px);
 	transform: translateX(20px);
-}
+}*/
 
-.cl-effect-1 a::after {
+/*.cl-effect-1 a::after {
 	margin-left: 10px;
 	content: ']';
 	-webkit-transform: translateX(-20px);
 	-moz-transform: translateX(-20px);
 	transform: translateX(-20px);
-}
+}*/
 
-.cl-effect-1 a:hover::before,
+/*.cl-effect-1 a:hover::before,
 .cl-effect-1 a:hover::after,
 .cl-effect-1 a:focus::before,
 .cl-effect-1 a:focus::after {
@@ -123,7 +124,7 @@ font-family: 'Jockey One', sans-serif;
 	-webkit-transform: translateX(0px);
 	-moz-transform: translateX(0px);
 	transform: translateX(0px);
-}
+}*/
 /*-- //effect --*/
 /*-- my skills --*/
 /*--- circles --*/
@@ -674,8 +675,8 @@ color:#76b852;
 	  font-size: 8em;
 	  }
 	.nav-right ul li a {
-	  font-size: 15px;
-	  padding: 10px 70px;
+	  font-size: 14px;
+	  padding: 10px 60px;
 	  }
 	.nav-right ul {
 	  margin: 27px 0 0 0;
@@ -684,10 +685,10 @@ color:#76b852;
 	  line-height: 3.8em;
 	}
 	.nav-right ul li:nth-child(2) a ,.nav-right ul li:nth-child(4) a {
-	  padding: 10px 55px;
+	  padding: 10px 45px;
 	}
 	.nav-right ul li:nth-child(1) a,.nav-right ul li:nth-child(5) a {
-	  padding: 10px 45px;
+	  padding: 10px 35px;
 	}
 	.about,.our-skills,div#portfolio,.services,.news,.get-in-touch,.contact-us {
 	  padding: 60px 0;
@@ -772,14 +773,14 @@ color:#76b852;
 	}
 	.nav-right ul li a {
 	  font-size: 14px;
-	  padding: 8px 47px;
-	}
-	.nav-right ul li:nth-child(2) a ,.nav-right ul li:nth-child(4) a {
 	  padding: 8px 37px;
 	}
-	.nav-right ul li:nth-child(1) a,.nav-right ul li:nth-child(5) a {
+	.nav-right ul li:nth-child(2) a ,.nav-right ul li:nth-child(4) a {
 	  padding: 8px 27px;
 	}
+	/*.nav-right ul li:nth-child(1) a,.nav-right ul li:nth-child(5) a {
+	  padding: 8px 17px;
+	}*/
 	.nav-right ul li {
 	  line-height: 3.5em;
 	}
@@ -1052,13 +1053,13 @@ color:#76b852;
 	}
 	.nav-right ul li a {
 	  font-size: 13px;
-	  padding: 8px 30px;
-	}
-	.nav-right ul li:nth-child(2) a ,.nav-right ul li:nth-child(4) a {
 	  padding: 8px 20px;
 	}
-	.nav-right ul li:nth-child(1) a,.nav-right ul li:nth-child(5) a {
+	.nav-right ul li:nth-child(2) a ,.nav-right ul li:nth-child(4) a {
 	  padding: 8px 10px;
+	}
+	.nav-right ul li:nth-child(1) a,.nav-right ul li:nth-child(5) a {
+	  padding: 8px 5px;
 	}
 	.nav-right ul li {
 	  line-height: 3.2em;
@@ -1205,13 +1206,13 @@ color:#76b852;
 	  width: 81%;
 	}
 	.nav-right ul li a {
-	  padding: 8px 11px;
+	  padding: 8px 5px;
 	}
 	.nav-right ul li:nth-child(2) a ,.nav-right ul li:nth-child(4) a {
-	  padding: 8px 7px;
+	  padding: 8px 3px;
 	}
 	.nav-right ul li:nth-child(1) a,.nav-right ul li:nth-child(5) a {
-	  padding: 8px 4px;
+	  padding: 8px 2px;
 	}
 	
 }
